# github-bot-signed-commit

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/actions/github/app-token/: action.yaml
.github/actions/github/auto-merge/: action.yaml
.github/workflows/: auto-merge.yaml  pull-request.yaml
src/bot/: cli.py  dtos.py  enums.py  local.py  remote.py
src/bot/cli/: commit.py  main.py
src/bot/tests/: test_enums.py  test_local.py
