[project]

name = "bot"

dynamic = ["version", "readme"]

requires-python = ">=3.10"

dependencies = [
  "click==8.3.1",
  "GitPython==3.1.46",
  "PyGithub==2.8.1",
]


[project.optional-dependencies]

dist = [
  "build==1.4.0",
]

style = [
  "ruff==0.15.3",
]

test = [
  "pytest==9.0.2",
  "httpx==0.28.1"
]

types = [
  "mypy==1.19.1",
  "types-requests==2.32.4.20260107",
]


[project.scripts]

read-commit = "bot.cli:read"
write-commit = "bot.cli:write"

[build-system]

requires = [
  "setuptools==82.0.0",
  "wheel==0.46.3",
]
build-backend = "setuptools.build_meta"


[tool.setuptools.dynamic]

version = { file = ".version" }
readme = { file = "README.md", content-type = "text/markdown" }


[tool.setuptools.packages.find]

where = ["src"]
exclude = ["*tests*"]


[tool.setuptools.package-data]

"*" = ["py.typed"]


[tool.black]

line-length = 88


[tool.flake8]

exclude = ".venv"
max-line-length = 88

[tool.isort]

profile = "black"


[tool.mypy]

check_untyped_defs = true
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true

pretty = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

exclude = "generated"

[tool.pytest.ini_options]

addopts = "--import-mode=importlib"
